[package]
name = "prog-lister"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "prog-lister"
path = "src/main.rs"

[patch.crates-io]
aya = { git = "https://github.com/dave-tucker/aya", branch = "prog_list" }
